--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "removeComments": true,
     "outDir": "dist",
     "sourceRoot": "./",
-    "allowJs": true
+    "allowJs": true,
+    "declaration": true
   },
   "exclude": [
     "node_modules"
