--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ricdotnet/logger",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "A logger utility for my personal projects.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,16 @@
     "build": "rm -rf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["logger", "logs", "console.log", "log", "logjs", "logts", "logger4ts", "logger4js"],
+  "keywords": [
+    "logger",
+    "logs",
+    "console.log",
+    "log",
+    "logjs",
+    "logts",
+    "logger4ts",
+    "logger4js"
+  ],
   "author": "ricdotnet <me@rrocha.uk> https://ricr.dev",
   "repository": "https://github.com/ricdotnet/logger-utility",
   "license": "ISC",
