* some more bug fixing;

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,7 @@
 node_modules
 
 package-lock.json
+jest.config.js
 
 .env
 .env.*
@@ -8,3 +9,6 @@ package-lock.json
 .idea
 .vscode
 .DS_Store
+
+src
+Tests
