--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules
-dist
+/node_modules
+/dist
 
 package-lock.json
 
@@ -10,4 +10,4 @@ package-lock.json
 .vscode
 .DS_Store
 
-Logs
+/Logs
